--- a/grammar/compiled/esti-eat.latex
+++ b/grammar/compiled/esti-eat.latex
@@ -1,30 +1,30 @@
 \begin{center}
 \footnotesize
-\begin{tabular}{l|llllll}
+\begin{tabularx}{\textwidth}{l|XXXXXX}
 	\toprule
 	\multicolumn{7}{c}{ACTIVE} \\
 	\toprule
 	~ & \multicolumn{3}{c}{Participle} & \multicolumn{3}{c}{Infinitive} \\
 	\midrule
 	\Prs
-	& \multicolumn{3}{c}{ \lan{ edants }}
-	& \multicolumn{3}{c}{ \lan{ estin }} \\
+	& \multicolumn{3}{c}{ \mlan{ edants }}
+	& \multicolumn{3}{c}{ \mlan{ estin }} \\
 	\Prf
-	& \multicolumn{3}{c}{ \lan{ beravés }}
-	& \multicolumn{3}{c}{ \lan{ vevopetin }} \\
+	& \multicolumn{3}{c}{ \mlan{ beravés }}
+	& \multicolumn{3}{c}{ \mlan{ vevopetin }} \\
 	\midrule
-	~ & \lan{edo} & \lan{tu} & \lan{eno}
-	& \lan{vi} & \lan{ju} & \lan{enoi} \\
+	~ & \mlan{edo} & \mlan{tu} & \mlan{eno}
+	& \mlan{vi} & \mlan{ju} & \mlan{enoi} \\
 	\midrule
-	\Prs& \lan{ edmi }& \lan{ edsi }& \lan{ esti }& \lan{ edmos }& \lan{ este }& \lan{ edanti }\\
-	\Impf& \lan{ edam }& \lan{ eds }& \lan{ est }& \lan{ edme }& \lan{ este }& \lan{ edant }\\
-	\Prf& \lan{ beram }& \lan{ beras }& \lan{ berat }& \lan{ berame }& \lan{ berate }& \lan{ berant }\\
+	\Prs& \mlan{ edmi }& \mlan{ edsi }& \mlan{ esti }& \mlan{ edmos }& \mlan{ este }& \mlan{ edanti }\\
+	\Impf& \mlan{ edam }& \mlan{ eds }& \mlan{ est }& \mlan{ edme }& \mlan{ este }& \mlan{ edant }\\
+	\Prf& \mlan{ beram }& \mlan{ beras }& \mlan{ berat }& \mlan{ berame }& \mlan{ berate }& \mlan{ berant }\\
 	\midrule
-	\Prs& \lan{ edjém }& \lan{ edjés }& \lan{ edjét }& \lan{ edíme }& \lan{ edíte }& \lan{ edínt }\\
-	\Prf& \lan{ berjém }& \lan{ berjés }& \lan{ berjét }& \lan{ beríme }& \lan{ beríte }& \lan{ berínt }\\
+	\Prs& \mlan{ edjém }& \mlan{ edjés }& \mlan{ edjét }& \mlan{ edíme }& \mlan{ edíte }& \mlan{ edínt }\\
+	\Prf& \mlan{ berjém }& \mlan{ berjés }& \mlan{ berjét }& \mlan{ beríme }& \mlan{ beríte }& \mlan{ berínt }\\
 	\midrule
-	\Prs& - & \lan{ ed } & -& - & \lan{ este } & -\\
-	\Prf& - & \lan{ bera } & -& - & \lan{ berate } & -\\
+	\Prs& - & \mlan{ ed } & -& - & \mlan{ este } & -\\
+	\Prf& - & \mlan{ bera } & -& - & \mlan{ berate } & -\\
 
 	\toprule
 	\multicolumn{7}{c}{MEDIOPASSIVE} \\
@@ -32,25 +32,25 @@
 	~ & \multicolumn{3}{c}{Participle} & \multicolumn{3}{c}{Infinitive} \\
 	\midrule
 	\Prs
-	& \multicolumn{3}{c}{ \lan{ edmanos }}
-	& \multicolumn{3}{c}{ \lan{ edmin }} \\
+	& \multicolumn{3}{c}{ \mlan{ edmanos }}
+	& \multicolumn{3}{c}{ \mlan{ edmin }} \\
 	\Prf
-	& \multicolumn{3}{c}{ \lan{ beramnos }}
-	& \multicolumn{3}{c}{ \lan{ beramin }} \\
+	& \multicolumn{3}{c}{ \mlan{ beramnos }}
+	& \multicolumn{3}{c}{ \mlan{ beramin }} \\
 	\midrule
-	~ & \lan{edo} & \lan{tu} & \lan{eno}
-	& \lan{vi} & \lan{ju} & \lan{enoi} \\
+	~ & \mlan{edo} & \mlan{tu} & \mlan{eno}
+	& \mlan{vi} & \mlan{ju} & \mlan{enoi} \\
 	\midrule
-	\Prs& \lan{ édar }& \lan{ éstar }& \lan{ éstor }& \lan{ edmosda }& \lan{ esdave }& \lan{ édantor }\\
-	\Impf& \lan{ eda }& \lan{ esta }& \lan{ esto }& \lan{ edmeda }& \lan{ esdave }& \lan{ edanto }\\
-	\Prf& \lan{ bera }& \lan{ berata }& \lan{ berato }& \lan{ berameda }& \lan{ beradave }& \lan{ beranto }\\
+	\Prs& \mlan{ édar }& \mlan{ éstar }& \mlan{ éstor }& \mlan{ edmosda }& \mlan{ esdave }& \mlan{ édantor }\\
+	\Impf& \mlan{ eda }& \mlan{ esta }& \mlan{ esto }& \mlan{ edmeda }& \mlan{ esdave }& \mlan{ edanto }\\
+	\Prf& \mlan{ bera }& \mlan{ berata }& \mlan{ berato }& \mlan{ berameda }& \mlan{ beradave }& \mlan{ beranto }\\
 	\midrule
-	\Prs& \lan{ edí }& \lan{ edíta }& \lan{ edíto }& \lan{ edimeda }& \lan{ edidave }& \lan{ edínto }\\
-	\Prf& \lan{ berí }& \lan{ beríta }& \lan{ beríto }& \lan{ berímeda }& \lan{ berídave }& \lan{ berínto }\\
+	\Prs& \mlan{ edí }& \mlan{ edíta }& \mlan{ edíto }& \mlan{ edimeda }& \mlan{ edidave }& \mlan{ edínto }\\
+	\Prf& \mlan{ berí }& \mlan{ beríta }& \mlan{ beríto }& \mlan{ berímeda }& \mlan{ berídave }& \mlan{ berínto }\\
 	\midrule
-	\Prs& - & \lan{ edso } & -& - & \lan{ esdave } & -\\
-	\Prf& - & \lan{ beraso } & -& - & \lan{ beradave } & -\\
+	\Prs& - & \mlan{ edso } & -& - & \mlan{ esdave } & -\\
+	\Prf& - & \mlan{ beraso } & -& - & \mlan{ beradave } & -\\
 	\bottomrule
-\end{tabular}
+\end{tabularx}
 \end{center}
 
